theming of front

--- a/sites/all/modules/features/scholar_profiles/scholar-profiles.css
+++ b/sites/all/modules/features/scholar_profiles/scholar-profiles.css
@@ -1,4 +1,7 @@
 .node-type-person .imagecache-image_s, .node-type-person .imagecache-vsite_design_landscape_logo {
 	float: left;
 	margin: 0 15px 10px 0;
+	padding: 3px;
+	background: #fff;
+	border: 1px solid #ddd;
   }
