--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -109,8 +109,8 @@ ul#top-front li a:hover {
   text-decoration: underline;
   }
 
-li#get-form {
-  background:url(images/get-your-site-button.png) no-repeat;
+li#get-form, li#coming-soon {
+  background:url(images/coming-soon-button.png) no-repeat;
   width: 169px;
   height: 42px;
   text-indent: -999em;
@@ -217,6 +217,10 @@ li#get-form a {
 
 #feature-look-feel {
   background:url(images/front-row2-lookfeel.jpg)
+  }
+
+#feature-wordout {
+  background:url(images/front-row2-wordout.jpg)
   }
 
 #feature-collaborate, #feature-events {
