some bug fixes to theme 08

--- a/sites/all/themes/scholar_theme_08/scholar-theme-08.css
+++ b/sites/all/themes/scholar_theme_08/scholar-theme-08.css
@@ -47,6 +47,10 @@ h2.title {
   font-size: 1.2em;
   }
 
+h3 {
+  font-size: 1em;
+  }
+
 #header p {
   margin: 0 10px 0 0;
   font-size: 11px;
@@ -172,6 +176,15 @@ body.sidebar-left p.copy, body.two-sidebars p.copy {
   }
 
 /* SIDEBAR LEFT */
+
+#sidebar-left .block {
+  padding: 0 16px 16px 16px;
+  }
+
+
+#sidebar-left #block-vsite_menus-0 {
+  padding: 0 0 16px 0;
+  }
 
 #block-vsite_menus-0 ul.menu {
   padding-top: 30px;
