fixed long taxonomies

--- a/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
+++ b/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
@@ -19,10 +19,9 @@
   }
 
 #vsite-taxonomy-wrapper .item-list, .addcategory {
-  float: right;
-  width:280px;
   padding-bottom: 2em;
-  margin-top: -1.7em;
+  margin-top: -15px;
+  margin-left: 260px;
   }
 
 #vsite-taxonomy-wrapper .item-list ul li {
