--- a/sites/all/themes/qualitative_methods/qualitative-methods.css
+++ b/sites/all/themes/qualitative_methods/qualitative-methods.css
@@ -49,9 +49,10 @@ body {
   background: #353a3c;
   color:#fff;
   padding: 4px 5px;
+  letter-spacing: -1px;
+  border-radius: 5px;
   -moz-border-radius:5px;
   -webkit-border-radius:5px;
-  border-radius: 5px;
   }
 
 .block-vsite_menus li a, .block-vsite_menus li a:visited {
@@ -89,7 +90,7 @@ body {
 
 #content-wrapper {
   background: #fdfdfd;
-  overflow:hidden;
+  overflow:auto;
   padding-top: 30px;
   padding-bottom: 30px;
   padding-right: 0;
@@ -147,4 +148,8 @@ p.copy, p.copy a, p.copy a:visited {
 
 p.copy a {
   text-decoration: underline;
+  }
+
+p.copy a.footer-login {
+  color: #222;
   }
