fixed litecal h3 bug

--- a/sites/all/themes/qualitative_methods/qualitative-methods.css
+++ b/sites/all/themes/qualitative_methods/qualitative-methods.css
@@ -45,7 +45,7 @@ body {
   margin-top: 10px;
   }
 
-#sidebar-left h3, #sidebar-right h3 {
+#sidebar-left h3, #sidebar-right h3, #sidebar-right div.litecal .litecal-title h3.litecal-title, #sidebar-left div.litecal .litecal-title h3.litecal-title {
   background: #353a3c;
   color:#fff;
   padding: 4px 5px;
@@ -53,6 +53,7 @@ body {
   border-radius: 5px;
   -moz-border-radius:5px;
   -webkit-border-radius:5px;
+  float:none;
   }
 
 .block-vsite_menus li a, .block-vsite_menus li a:visited {
