fixed litecal h3 bug

--- a/sites/all/themes/qualitative_methods/qualitative-methods.css
+++ b/sites/all/themes/qualitative_methods/qualitative-methods.css
@@ -49,11 +49,11 @@ body {
   background: #353a3c;
   color:#fff;
   padding: 4px 5px;
-  letter-spacing: -1px;
-  border-radius: 5px;
   -moz-border-radius:5px;
   -webkit-border-radius:5px;
+  border-radius: 5px;
   float:none;
+  font-size: 14px;
   }
 
 .block-vsite_menus li a, .block-vsite_menus li a:visited {
@@ -91,7 +91,7 @@ body {
 
 #content-wrapper {
   background: #fdfdfd;
-  overflow:auto;
+  overflow:hidden;
   padding-top: 30px;
   padding-bottom: 30px;
   padding-right: 0;
@@ -149,8 +149,4 @@ p.copy, p.copy a, p.copy a:visited {
 
 p.copy a {
   text-decoration: underline;
-  }
-
-p.copy a.footer-login {
-  color: #222;
   }
