fixed litecal h3 bug

--- a/sites/all/themes/qualitative_methods/qualitative-methods.css
+++ b/sites/all/themes/qualitative_methods/qualitative-methods.css
@@ -54,6 +54,7 @@ body {
   border-radius: 5px;
   float:none;
   font-size: 14px;
+  line-height: 17px;
   }
 
 .block-vsite_menus li a, .block-vsite_menus li a:visited {
