front page new sites bug fix, bates screetshot

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -294,6 +294,7 @@ li#get-form a {
   float: left;
   width: 134px;
   margin-left: 24px;
+  clear: none;
   }
 
 #block-views-iqss_project_sites-block_1 img, .view-iqss-project-sites img {
