--- a/sites/all/themes/scholar_theme_10/scholar-theme-10.css
+++ b/sites/all/themes/scholar_theme_10/scholar-theme-10.css
@@ -83,7 +83,6 @@ p.copy {
 
 #sidebar-right, #header-right {
   width: 164px;
-  padding-right:43px;
   padding-left: 38px;
   }
 
@@ -107,6 +106,7 @@ p.copy {
 #header {
   background: url(images/header.png) no-repeat 0 0;
   height: 154px;
+  padding: 0 33px;
   }
 
 body.sidebar-left #content-wrapper, body.sidebar-left #header, body.sidebar-left #footer {
@@ -115,12 +115,16 @@ body.sidebar-left #content-wrapper, body.sidebar-left #header, body.sidebar-left
 
 body.sidebar-right #content-wrapper, body.no-sidebars #header, body.no-sidebars #footer {
   background-position: -2024px 0;
+  padding-left: 43px;
   }
 
 body.no-sidebars #content-wrapper, body.no-sidebars #footer, body.navbar-off #header, body.navbar-off #content-wrapper  {
   background-position: -3036px 0;
   }
 
+body.sidebar-left #content-wrapper {
+  padding-left: 210px;
+  }
 
 /* SIDEBAR ELEMENTS */
 
@@ -136,7 +140,6 @@ body.navbar-off #sidebar-left {
 
 /* HEADER ELEMENTS */
 
-
 #header .column {
   padding-top: 23px;
   }
@@ -146,11 +149,7 @@ body.navbar-off #sidebar-left {
   }
 
 .header-main #header-wrapper, .header-main-right #header-wrapper {
-  padding-right:298px;
-  }
-
-.header-main #header-main, .header-main-right #header-main {
-  padding-left: 43px;
+  padding-right:250px;
   }
 
 #header h1, #header h2, #header p {
@@ -183,7 +182,6 @@ body.navbar-off #sidebar-left {
     }
 
 #navbar {
-  margin:0 29px;
   width: auto;
   }
 
@@ -193,18 +191,24 @@ body.navbar-off #sidebar-left {
     }
 
 #navbar li a, #sidebar-left #block-vsite_menus-0 li a {
-  line-height: 25px;
+  line-height: 31px;
   text-transform:uppercase;
   color: #544f4f;
   font-weight:normal;
   font-size: 11px;
-  display:block;
-  padding: 3px 15px;
+  padding: 6px 15px 5px 15px;
   }
 
 #sidebar-left #block-vsite_menus-0 li a {
   padding-left: 30px;
   }
+
+#navbar li a:hover, #navbar li a.active, #navbar li.active-trail a {
+  background: #e7d504;
+  color: #000;
+  text-decoration: none;
+  }
+
 
 #logo img {
   height: 100px;
@@ -214,9 +218,13 @@ body.navbar-off #sidebar-left {
   height: 52px;
   }
 
-/* MAIN CONTENT AREA */
 
+/*Footer */
 
+#footer, body.no-sidebars #footer, body.sidebar-right #footer, body.sidebar-left #footer {
+  padding-left: 0;
+  padding-right: 0;
+  }
 
 /* Nodes */
 
