changes to this theme

--- a/sites/all/themes/scholar_theme_11/scholar-theme-11.css
+++ b/sites/all/themes/scholar_theme_11/scholar-theme-11.css
@@ -92,7 +92,6 @@ p.copy {
    }
 
 #header {
-  height: 140px;
   overflow:auto;
   }
 
@@ -111,6 +110,14 @@ body.no-sidebars #content-wrapper  {
 
 /* SIDEBAR ELEMENTS */
 
+#sidebar-right, #sidebar-left {
+  font-size: 13px;
+  line-height: 1.2em;
+  }
+
+#sidebar-right a, #sidebar-right a:visited, #sidebar-left a, #sidebar-left a:visited {
+  color: #e3dfdf;
+  }
 
 /* HEADER ELEMENTS */
 
@@ -125,6 +132,12 @@ body.header-main #header-wrapper, body.header-main-right #header-wrapper {
 
 body.header-main #header-main, body.header-main-right #header-main {
   padding-left: 22px;
+  }
+
+
+#block-scholar-1 {
+  display:table-cell;
+  vertical-align:middle;
   }
 
 #header h1, #header h2, #header p {
