added sidebar functionality for front themes

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -35,35 +35,35 @@ h3 {
 /* LAYOUT ELEMENTS */
 
 .column {
-  position: static;
-  padding: 0;
-  }
-
-
-#sidebar-left, #header-left {
-    width: auto;
-    }
-
-#content-wrapper, #header-wrapper, #header-left, #header-right {
-    padding: 0;
-    margin: 0;
-    }
-
+   }
 
 div.form-item {
   border: none;
   }
 
 
+
 /* HEADER ELEMENTS */
+
+
 
 #header {
     height: 113px;
     }
 
+#header-wrapper {
+  padding:0;
+  }
+
+#header-left {
+  margin-left: 0;
+  right: 0;
+  }
+
 #header-right {
   float: right;
   width: 542px;
+  margin-right: 0;
   }
 
 #header h1 {
