--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -57,6 +57,7 @@
   height:114px;
   background:#eaebe9;
   width: 100%;
+  padding-left: 10px;
   }
 
 li.scholarlayout-item {
@@ -136,7 +137,7 @@ li.scholarlayout-item {
 #scholarlayout-top-widgets .close-this {
   display:none;
   }
-  
+
 #scholarlayout-top-widgets li.disabled,
 #scholarlayout-container li.disabled {
   display:none;
