--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
@@ -81,7 +81,9 @@ ul.theme-picker li.checked h3, .item-theme-picker li.checked .form-item {
   background:#eaebe9;
   height: 43px;
   padding-left: 30px;
-  padding-left: 30px
+  padding-left: 30px;
+  margin-left: -30px;
+  margin-top: -30px;
   }
 
 .theme_subnav h3, .theme_subnav ul, .theme_subnav li, #next, #prev {
