--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design_theme_picker.css
@@ -33,12 +33,12 @@ ul.theme-picker li.checked img {
 #cp-settings-form #next, #cp-settings-form #prev {
   width: 15px;
   height: 14px;
-  background: transparent url(images/next.png) no-repeat;
+  background: transparent url(images/arrows.png) 0 0 no-repeat;
   margin-top: 3px;
   }
 
 #cp-settings-form #prev {
-  background-image: url(images/prev.png);
+  background-position: 0 -14px;
   }
 
 .theme-picker h3, ul.theme-picker li p, .item-theme-picker .form-item {
