feature request padding

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -103,7 +103,7 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   bottom: 0;
   }
 
-#cp-content .innerframe form, .view-display-id-page_1, .views-processed {
+#cp-content .innerframe form, .view-display-id-page_1, .views-processed , .view-vsite-support{
   margin: 30px;
   }
 
