--- a/sites/all/modules/vsite/cp/theme/cp-confirm-overide.css
+++ b/sites/all/modules/vsite/cp/theme/cp-confirm-overide.css
@@ -3,11 +3,12 @@
 .ui-dialog {
 	position: relative;
 	background: url(images/popup-box.png) no-repeat 0 0 transparent;
+	padding-bottom: 26px;
 	}
 
 
 
-.ui-dialog .ui-dialog-titlebar, .ui-dialog .ui-dialog-content {
+.ui-dialog .ui-dialog-titlebar, .ui-dialog .ui-dialog-content, .ui-dialog-buttonpane {
 	padding-top: 29px;
 	position: relative;
 	margin: 0 30px 0 45px;
@@ -44,7 +45,7 @@
 	background: none;
 	overflow: auto;
 	zoom: 1;
-
+	height: auto !important;
 	}
 
 
@@ -54,6 +55,7 @@
 	border-top: 1px solid #d8d9db;
 	padding: 7px 10px 28px 0;
 	width: 419px;
+	margin: 0;
 	}
 
 .ui-dialog .ui-dialog-buttonpane button {
