user page theming, attempt

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -58,6 +58,7 @@ p, div.messages, #content-main .views-row {
 	}
 
 
+
 #header h1, #header h2, #header p {
   margin: 0 0 .1em 0;
   }
@@ -112,6 +113,10 @@ p.copy a.footer-login:hover {
 
 .marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a, .addcategory a {
   color: #cc0000 !important;
+  }
+
+.nomarg {
+  margin: 0;
   }
 
 .block ul {
