--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -386,3 +386,18 @@ td, td.description {
   padding: 17px;
   font-size: 1.1em;
   }
+
+
+/* CONTENT PROFILES */
+
+.field-field-user-profile-photo {
+  float: right;
+  }
+
+p.single, ul.single, ul.single li {
+  display:inline;
+  }
+
+p.single {
+  margin-right: 8px;
+  }
