fixed vocab box legend

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -16,6 +16,10 @@ fieldset {
 	float: left;
 	}
 
+.section-cp fieldset .og-vocab-taxonomy legend {
+  float: none;
+  }
+
 .section-cp .fieldset-wrapper, .section-cp div.description  {
 	padding: 4px;
 	margin-bottom: 3em;
@@ -30,7 +34,7 @@ fieldset {
   }
 
 .section-cp .fieldset-wrapper .fieldset-wrapper,
-.section-cp .og-vocab-taxonomy .fieldset-wrapper {
+.section-cp .og-vocab-taxonomy .fieldset-wrapper,  {
 	margin: 0;
 	}
 
