theming for dropdown menu

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -140,11 +140,12 @@ ul.links li {
   padding: 0;
   }
 
+
 ul.links li a, ul.links li a:visited {
   text-decoration: none;
   font-style: normal;
   padding: 1px 3px;
-  font-size:12px;
+  font-size: 12px;
   color: #005C9C;
   background: transparent;
   }
@@ -413,7 +414,7 @@ a.delete {
   margin: 0;
   }
 
-.item-list ul.context-links li {
+.item-list ul.context-links li, #ctools-dropdown-1 {
   list-style: none;
   margin:0 0 0 .7em;
   float:right;
