themed popups, including date picker

--- a/sites/all/themes/scholar_base/dropdown.css
+++ b/sites/all/themes/scholar_base/dropdown.css
@@ -36,7 +36,7 @@ html.js div.ctools-dropdown a.ctools-dropdown-text-link {
   padding-left: 12px;
 }
 
-html.js div.ctools-dropdown div.ctools-dropdown-container {
+html.js div.ctools-dropdown div.ctools-dropdown-container, #ui-datepicker-div {
   width: 175px;
   background: #fff;
   border: 1px solid #ccc;
@@ -53,6 +53,28 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   -webkit-box-shadow:  #888 0 4px 25px;
   box-shadow: 0 4px 25px #888;
 
+  }
+
+#ui-datepicker-div {
+  padding: 25px 6px 10px 6px;
+  width: 212px;
+  }
+
+.ui-datepicker-next, .ui-datepicker-prev {
+  background: #fff;
+  }
+
+.ui-datepicker-title {
+  text-align: center;
+  padding-bottom: 6px;
+  }
+
+.ui-datepicker-calendar a {
+  padding: 1px;
+  }
+
+.ui-datepicker-calendar a:hover {
+  background: #e2f468;
   }
 
 html.js div.ctools-dropdown div.ctools-dropdown-container ul li li a {
