themed popups, including date picker

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -3,6 +3,7 @@
 fieldset {
   clear: both;
   padding: 0;
+  border: none;
   }
 
 .vertical-tabs fieldset {
@@ -74,6 +75,18 @@ select option {
 .section-cp .form-radios input {
   margin: 3px 3px 3px 0;
   }
+
+
+/*Creation forms that use horizontal radio buttons */
+
+.page-node-add-class .form-radios .form-item {
+  display:inline;
+  margin-right: 10px;
+  }
+
+/* End horizontal radios */
+
+
 
 .section-cp fieldset table tr {
   border: none;
