--- a/sites/all/themes/scholar_base/dropdown.css
+++ b/sites/all/themes/scholar_base/dropdown.css
@@ -55,6 +55,10 @@ html.js div.ctools-dropdown div.ctools-dropdown-container, #ui-datepicker-div {
 
   }
 
+table.ui-datepicker-calendar {
+  width: 100%;
+  }
+
 #ui-datepicker-div {
   padding: 25px 6px 10px 6px;
   width: 212px;
