--- a/sites/all/themes/scholar_base/dropdown.css
+++ b/sites/all/themes/scholar_base/dropdown.css
@@ -81,6 +81,14 @@ table.ui-datepicker-calendar {
   background: #e2f468;
   }
 
+.page-node-add-event .date-clear-block {
+  display:inline-block;
+  margin-right: 20px;
+  width: 45%;
+  padding: 4px 4px 4px 8px;
+  background:#e2f468;
+  }
+
 html.js div.ctools-dropdown div.ctools-dropdown-container ul li li a {
   padding-left: 25px;
   width: 150px;
