resized logos until body class is added

--- a/sites/all/themes/scholar_theme_11/scholar-theme-11.css
+++ b/sites/all/themes/scholar_theme_11/scholar-theme-11.css
@@ -224,7 +224,7 @@ body.header-main #header-main, body.header-main-right #header-main {
   }
 
 #logo img {
-  width: 129px;
+  height: 74px;
   }
 
 #scholar-shield img {
