themed user areas

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -9,10 +9,45 @@ body {
     padding-top: 26px;
     }
 
+body.section-user {
+  background: #444;
+  }
+
 #container {
     width: 982px;
     margin: 0 auto;
     }
+
+.section-user #container {
+    background: #fff;
+    overflow: auto;
+    width: 446px;
+    padding: 30px 30px 40px 30px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 5px
+    }
+
+.section-user input.form-submit {
+  float:right;
+  }
+
+.section-user h2.title {
+  display:none;
+  }
+
+.section-user div.tabs {
+  margin: 0 -30px 5px -30px;
+  }
+
+.section-user div.tabs ul.primary {
+  padding-left: 36px;
+  }
+
+.section-user div.tabs ul.primary li a {
+  font-weight: normal;
+  font-size: .8em;
+  }
 
 a, a:visited {
     color:#990000;
