--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -1,7 +1,3 @@
-html {
-    min-width: 1000px;
-    }
-
 body {
     background: url(images/body-bg.png) repeat-x #9ac0c9;
     color:#313030;
@@ -13,6 +9,42 @@ body {
     width: 982px;
     margin: 0 auto;
     }
+
+body.section-user {
+  background: #444;
+  }
+
+.section-user #container {
+    background: #fff;
+    overflow: auto;
+    width: 446px;
+    padding: 30px 30px 40px 30px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    }
+
+.section-user input.form-submit {
+  float:right;
+  }
+
+.section-user h2.title {
+  display:none;
+  }
+
+.section-user div.tabs {
+  margin: 0 -30px 5px -30px;
+  }
+
+.section-user div.tabs ul.primary {
+  padding-left: 36px;
+  }
+
+.section-user div.tabs ul.primary li a {
+  font-weight: normal;
+  font-size: .8em;
+  }
+
 
 a, a:visited {
     color:#990000;
