left sidebar menu fix

--- a/sites/all/themes/scholar_theme_08/scholar-theme-08.css
+++ b/sites/all/themes/scholar_theme_08/scholar-theme-08.css
@@ -200,9 +200,9 @@ body.sidebar-left p.copy, body.two-sidebars p.copy {
   padding-left: 16px;
   }
 
-#sidebar-left #block-vsite_menus-0 ul.menu li a {
-  margin-left: -16px;
-  margin-right: -16px;
+#sidebar-left #block-vsite_menus-0 {
+  padding-left:0;
+  padding-right: 0;
   }
 
 #header #block-vsite_menus-0 ul.menu li {
