tinymce ul and ol fix

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -7,13 +7,31 @@ body, #top, #footer {
   overflow: hidden;
   }
 
+/*TINYMCE TYPOGRAPHY */
 
 body#tinymce {
 	background: #fff;
-	font-size: 1em;
 	margin: 10px;
+	font-size: .9em;
 	overflow: auto;
 	}
+
+body#tinymce h2, body#tinymce h3, body#tinymce h4, body#tinymce p, body#tinymce ul, body#tinymce ol {
+  margin-bottom: 1.5em;
+  }
+
+body#tinymce ul, body#tinymce ol {
+  padding-left: 1.5em;
+  }
+
+body#tinymce ul li {
+  list-style: disc outside;
+  }
+
+body#tinymce ol li {
+  list-style: decimal outside;
+  }
+
 
 #container {
 	margin: 0;
