small fixes on a number of things

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -190,6 +190,7 @@ body.admin-menu #main-content {
 
 #cp-sidemenu li {
   padding: 0;
+  list-style: none !important;
   }
 
 #cp-sidemenu li a, #cp-sidemenu li a:visited {
