--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -1,7 +1,3 @@
-html {
-    min-width: 1000px;
-    }
-
 body {
     background: url(images/body-bg.png) repeat-x #fff;
     color:#313030;
@@ -9,14 +5,16 @@ body {
     padding-top: 26px;
     }
 
-body.section-user {
-  background: #444;
-  }
 
 #container {
     width: 982px;
     margin: 0 auto;
     }
+
+
+body.section-user {
+  background: #444;
+  }
 
 .section-user #container {
     background: #fff;
@@ -25,7 +23,7 @@ body.section-user {
     padding: 30px 30px 40px 30px;
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
-    border-radius: 5px
+    border-radius: 8px;
     }
 
 .section-user input.form-submit {
