--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -89,6 +89,7 @@ h2.title {
   right: 254px;
   padding-right: 10px !important;
   padding-left: 44px !important;
+
   }
 
 #sidebar-right, #header-right {
@@ -102,6 +103,15 @@ h2.title {
   margin: 0 auto;
   padding-left: 184px;
   padding-right: 279px;
+  }
+
+#sidebar-left, #sidebar-right {
+  font-size: 13px;
+  line-height: 112%;
+  }
+
+#sidebar-left li, #sidebar-right li {
+  margin-bottom: .7em;
   }
 
 body.header-main #sidebar-left, body.header-main-right #sidebar-left {
