removes arrows if no overflow

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -211,7 +211,7 @@ li.scholarlayout-item {
   }
 
 .disabled {
-  background-position: -60px 50%;
+  background: transparent !important;
   }
 
 #scholarlayout-container .widget-prev, #scholarlayout-container .widget-next{
