Various bug fixes

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -172,7 +172,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container ul li a:hover {
   color: #000 !important;
   }
 
-.item-list ul.context-links li, #ctools-dropdown-1 {
+.context-button, .item-list ul.context-links li, #ctools-dropdown-1 {
   float: none;
   }
 
