--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -1,3 +1,7 @@
+html {
+  min-width: 960px;
+  }
+
 body {
     background: url(images/body-bg-no-sidebar.jpg) 50% 135px repeat-y #6d2a01;
     color:#666;
@@ -133,11 +137,15 @@ body.navbar #content-main {
   margin-top: 30px;
   }
 
+#content-main, #sidebar-right, #sidebar-left {
+  padding-top: 0;
+  }
+
 
 /* HEADER ELEMENTS */
 
 #header-wrapper {
-  padding-right: 395px !important;
+  padding-right: 396px !important;
   }
 
 #header {
