added sub list theming to base theme

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -91,6 +91,15 @@ ol {
   padding:0 0 0 3px;
   }
 
+#content .node ul li ul {
+  margin-top: 1.5em;
+  }
+
+#content .node ul li li {
+  list-style: circle outside;
+  padding:0 0 0 3px;
+  }
+
 #navbar li, #header-top li, .views-admin-links li, ul.inline li {
   display:inline;
   }
