--- a/sites/all/themes/ptr/ptr.css
+++ b/sites/all/themes/ptr/ptr.css
@@ -179,6 +179,7 @@ p.copy a, p.copy a:visited {
   line-height: 36px;
   color: #03263f;
   padding-left: 16px;
+  font-weight:bold;
   }
 
 #sidebar-left #block-vsite_menus-0 {
@@ -212,13 +213,16 @@ p.copy a, p.copy a:visited {
   padding-top: 30px;
   }
 
-#sidebar-right a, #sidebar-right a:visited {
-  color: #e9e9e9;
+
+#sidebar-right a, #sidebar-right a:visited. #sidebar-right h3 {
+  padding-left: 16px;
+  }
+
+#sidebar-right h3 {
+  color: #699bae;
   }
 
 #sidebar-right li {
   list-style: none;
-  padding-left: 20px;
-  background: url(images/bullet.png) no-repeat 0 50% transparent;
   margin-left: 0;
   }
