continued work on ptr theme

--- a/sites/all/themes/ptr/ptr.css
+++ b/sites/all/themes/ptr/ptr.css
@@ -214,7 +214,7 @@ p.copy a, p.copy a:visited {
   }
 
 
-#sidebar-right a, #sidebar-right a:visited. #sidebar-right h3 {
+#sidebar-right a, #sidebar-right a:visited, #sidebar-right h3 {
   padding-left: 16px;
   }
 
