ptr theme changes

--- a/sites/all/themes/ptr/ptr.css
+++ b/sites/all/themes/ptr/ptr.css
@@ -118,6 +118,12 @@ body.sidebar-left #footer, body.no-sidebars #footer {
   margin: 23px 0 0 200px;
   }
 
+#header h1 a, #header h1 a:visited {
+  width: 172px;
+  height: 56px;
+  display:block;
+  }
+
 #header h2 {
   font-size: 12px;
   margin: 0 10px 3px 0;
