--- a/sites/all/themes/qualitative_methods/qualitative-methods.css
+++ b/sites/all/themes/qualitative_methods/qualitative-methods.css
@@ -25,7 +25,7 @@ body {
 
 /*TYPOGRAPHY*/
 
-#header h1, #header h2 {
+#header h1, #header h2, #header a, #header a:visited {
   color: #fff;
   margin-bottom: 0;
   font-weight: normal;
@@ -55,6 +55,7 @@ body {
   float:none;
   font-size: 14px;
   line-height: 17px;
+  margin-bottom: 1em;
   }
 
 .block-vsite_menus li a, .block-vsite_menus li a:visited {
