--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -121,9 +121,9 @@ p.copy a:hover {
   }
 
 p.copy a.footer-login {
-  background: #e9f1c6;
-  color: #000;
-  border: 1px solid #a1aaae;
+  background: #e9f1c6 !important;
+  color: #000 !important;
+  border: 1px solid #565b5d !important;
   padding: 1px 9px !important;
   -moz-border-radius:20px;
   -webkit-border-radius:20px;
@@ -131,7 +131,7 @@ p.copy a.footer-login {
   }
 
 p.copy a.footer-login:hover {
-  background: #fff;
+  background: #fff !important;
   }
 
 .marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a, .addcategory a {
