--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -1,77 +1,8 @@
 body {
     background: url(images/body-bg.png) repeat-x #9ac0c9;
-    color:#313030;
-    font:.9em/165% arial, helvetica, sans-serif;
-    padding-top: 26px;
-    }
-
-#container {
-    width: 982px;
-    margin: 0 auto;
-    }
-
-body.section-user {
-  background: #444;
-  }
-
-.section-user #container {
-    background: #fff;
-    overflow: auto;
-    width: 446px;
-    padding: 30px 30px 40px 30px;
-    -moz-border-radius: 8px;
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
-    }
-
-.section-user input.form-submit {
-  float:right;
-  }
-
-.section-user h2.title {
-  display:none;
-  }
-
-.section-user div.tabs {
-  margin: 0 -30px 5px -30px;
-  }
-
-.section-user div.tabs ul.primary {
-  padding-left: 36px;
-  }
-
-.section-user div.tabs ul.primary li a {
-  font-weight: normal;
-  font-size: .8em;
-  }
-
-
-a, a:visited {
-    color:#990000;
-    text-decoration: none;
-    }
-
-a:hover {
-    color:#3399CC;
-    }
-
-
-h1, h2, h3, #sidebar-left a, #header {
-    font-weight: bold;
-    }
-
-h3 {
-  font-size: 1.4em;
-  }
+     }
 
 /* LAYOUT ELEMENTS */
-
-.column {
-   }
-
-div.form-item {
-  border: none;
-  }
 
 #header-wrapper, #header-left {
   padding: 0;
@@ -85,54 +16,25 @@ div.form-item {
     height: 89px;
     }
 
-#header-wrapper {
-  padding:0;
-  }
 
-#header-left {
-  margin-left: 0;
-  right: 0;
-  }
-
-#header-right {
-  float: right;
-  width: 542px;
-  margin-right: 0;
-  }
-
-#header h1 {
+#header h1, body.page-site-register #header h1 {
   width: 421px;
-  height: 59px;
-  background: url(images/project-logo.png) no-repeat;
-  text-indent: -999em;
+  height: 64px;
+  background: url(images/project-logo.png) 0 -64px no-repeat;
   margin-left: 0px
   }
 
+.front #header h1 {
+  background-position: 0 0;
+  }
+
 #header h1 a, #header h1 a:visited {
-  display:block;
   width: 421px;
-  height: 59px;
+  height: 64px;
   }
 
-#header h2 {
-    font-size: 1.5em;
-    line-height:1.3em;
-    }
-
-#header h1 a, #header h1 a:visited {
-    color:#282828;
-    }
-
-ul#top-front {
-  float:right;
-  }
-
-ul#top-front li {
-  float: left;
-  font-weight: normal;
-  margin-left: 20px;
-  line-height:42px;
-  margin-top: 21px;
+body.page-site-register h2.title {
+  margin-top: 49px;
   }
 
 ul#top-front li a, ul#top-front li a:visited {
@@ -145,9 +47,6 @@ ul#top-front li a:hover {
 
 li#get-form {
   background:url(images/get-your-site-button.png) no-repeat transparent;
-  width: 169px;
-  height: 42px;
-  text-indent: -999em;
   position:relative;
   }
 
@@ -161,21 +60,14 @@ li#get-form span {
   left: 40px;
   }
 
-li#get-form a {
-  display: block;
-  width: 169px;
-  height: 42px;
-  }
-
 
 /* Content Area */
-
 
 .front #wrapper {
   background: url(images/wrapper.png) no-repeat 50% 81px transparent;
   }
 
-#content-wrapper {
+.front #content-wrapper {
   background: #fff;
   border: 1px solid #000;
   overflow: hidden;
@@ -197,82 +89,38 @@ li#get-form a {
   position: relative;
   }
 
-#content-row-1 .content {
-  width: 409px;
-  height: 321px;
-  margin: 19px auto 0 auto;
-  background:url(images/front-slideshow-1.png) no-repeat transparent;
-  padding-left: 491px;
-  padding-top: 78px;
-  }
-
-#tutorial-link {
-  width: 147px;
-  height: 90px;
-  background: url(images/triangle-video-tutorial.png) no-repeat transparent;
-  background: url(images/version-2.png) no-repeat transparent;
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-indent: -999em;
-  }
-
-#content-row-1 h2 {
-  font-size: 36px;
-  margin-bottom: 0;
-  color: #4a4949;
-  line-height: 120%;
-  }
-
-#content-row-1 h3 {
-  font-size: 30px;
-  color: #ababab;
-  line-height: 120%;
-  }
 
 #content-row-2 {
-  /*background:#e1e1e1;*/
-  height: 349px;
+  background:transparent
   }
 
 #content-row-2 .featureblock {
-  float: left;
-  width:195px;
-  height: 295px;
-  margin:1px 0 0 1px;
-  background-color: #fff;
-  padding: 26px 24px;
   border-right: 1px solid #ccc;
+  width: 195px;
   }
 
-#content-row-2 .featureblock h3, #content-row-2 .featureblock p {
-  font-size: 14px;
-  line-height: 1.3em;
-  margin-bottom: 1em;
-  }
-
-#feature-academic-content {
+#content-row-2 #feature-academic-content {
   background:url(images/front-row2-create-anything.jpg)
   }
 
-#feature-biblio {
+#content-row-2 #feature-biblio {
   background:url(images/front-row2-biblio.jpg)
   }
 
-#feature-look-feel {
+#content-row-2 #feature-look-feel {
   background:url(images/front-row2-lookfeel.jpg)
   }
 
-#feature-wordout {
+#content-row-2 #feature-wordout {
   background:url(images/front-row2-wordout.jpg)
   }
 
-#feature-collaborate, #feature-events {
+#content-row-2 #feature-collaborate, #content-row-2 #feature-events {
   background:url(images/front-row2-collaborate.jpg);
   border: none;
   }
 
-#feature-events {
+#content-row-2 #feature-events {
   background:url(images/front-row2-events.png);
   }
 
@@ -360,7 +208,6 @@ li#get-form a {
 
 #block-views-iqss_project_sites-block_1 {
   clear: both;
-
   }
 
 #block-views-iqss_project_sites-block_1 .views-row {
@@ -373,17 +220,6 @@ li#get-form a {
   border: 1px solid #535252;
   width: 100px;
   height: 100px;
-  }
-
-.views-field-description p {
-  font-weight: normal;
-  line-height: 1.3em;
-  margin-bottom: 0;
-  }
-
-.views-field-title a {
-  color: #313030;
-  font-weight: bold;
   }
 
 #block-views-iqss_project_sites-block_1 ul, #block-views-iqss_project_sites-block_1 .more-link {
@@ -423,42 +259,4 @@ p.copy, p.copy a, p.copy a:visited {
 
 p.copy a, p.copy a:visited {
   text-decoration: underline;
-  }
-
-
-
-/* Different Tables for admin use */
-
-table {
-  font-size: .8em;
-  }
-
-table th {
-  font-size: .8em;
-  text-transform: uppercase;
-  background-color: #eee;
-  border: 1px solid #ddd;
-  padding: 5px;
-  }
-
-tr.even, tr.odd {
-  border-bottom: 1px solid #ccc;
-  padding: .1em .6em;
-  }
-
-tr.even {
-  background-color: #eee;
-  }
-
-td, td.description {
-  border: 1px solid #ddd;
-  padding: 5px;
-  color: #222;
-  font-size: .9em;
-  }
-
-.view-iqss-project-sites td {
-  width: 20%;
-  padding: 17px;
-  font-size: 1.1em;
   }
